# chatmat

./: .envrc  README.md  default.nix  docker-compose.yml  flake.nix  makefile
back/: go.mod  main.go
chatmat-back/: Cargo.toml  Dockerfile  build.rs
chatmat-back/src/: server.rs
chatmat-back/tests/: webserver.rs
chatmat-front/: package-lock.json  package.json  pnpm-lock.yaml
chatmat-front/src/app/: page.tsx
chatmat-front/src/app/api/: route.ts
chatmat-front/src/proto/: HelloworldServiceClientPb.ts  helloworld_grpc_web_pb.js  helloworld_pb.d.ts
envoy/: envoy-dev.yaml  envoy.yaml
proto/: chat.proto  helloworld.proto
