[package]
name = "chatmat-back"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the helloWord gRPC server
name = "chatmat-server"
path = "src/server.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = { version = "0.3" }
tokio-stream = { version = "0.1"}
tokio-util = { version = "0.7.8" }

[build-dependencies]
tonic-build = "0.12"

